2004-02-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/Merge.py (gen_key,name_compare): 
	Fall back to not using soundex if the charset can't be latin-1 encoded.
	* src/plugins/soundgen.py: Fall back to empty input.
	* src/plugins/rel_ru.py: Add more possible russian LANG values.
	* src/EditPlace.py: Pass window to the Gallery.
	* src/ImageSelect.py: Run modal dialog, using parent window.
	* src/imagesel.glade: Define proper button responses.

2004-02-05  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/cmdline.xml: Update.
	* doc/gramps-manual/fr/filtref.xml: Update.
	* doc/gramps-manual/fr/mainwin.xml: Update.
	* doc/gramps-manual/fr/usage.xml: Update.

2004-02-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/template.po: Update translation template.
	* doc/gramps-manual/ru/filtref.xml: Update.
	* doc/gramps-manual/ru/getstart.xml: Update.
	* doc/gramps-manual/ru/gramps-manual.xml: Update.
	* doc/gramps-manual/ru/mainwin.xml: Update.
	* doc/gramps-manual/ru/usage.xml: Update.

2004-02-04  Egyeki Gergely  <egeri@elte.hu>
	* src/po/hu.po: Update.		

2004-02-04  Tim Waugh  <twaugh@redhat.com>
	* doc/gramps-manual/fr/filtref.xml: Fixed tag mismatch.

2004-02-03  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: new text string for "unknown" spouse
	* src/ImageSelect.py: integer conversions for event.x, event.y
	* src/const.py.in: copyright date update

2004-02-03  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/filtref.xml: Update.
	* doc/gramps-manual/fr/mainwin.xml: Update.
	* doc/gramps-manual/fr/usage.xml: Update.

2004-02-03  Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure.in, configure: Don't ship Hungarian manual (unfinished).
	* doc/gramps-manual/Makefile.am, doc/gramps-manual/Makefile.in:
	Don't ship Hungarian manual.
	* doc/gramps-manual/fr/gramps-manual.xml: Update.
	* doc/gramps-manual/C/gramps-manual.xml: Update.
	* doc/gramps-manual/ru/usage.xml: Update.