@@ -241,13 +241,14 @@ class Gallery(ImageSelect):
 
         _iconlist_refs.append(icon_list)
         self.in_event = 0
-        
+	
         # Remember arguments
         self.path      = path;
         self.dataobj   = dataobj;
         self.iconlist = icon_list;
         self.root = self.iconlist.root()
-
+	self.old_photo_list = self.dataobj.getPhotoList()[:]
+        
         # Local object variables
         self.y = 0
         self.remember_x = -1
@@ -257,7 +258,7 @@ class Gallery(ImageSelect):
         self.sel = None
         self.photo = None
 
-    def close(self):
+    def close(self,ok=0):
         self.iconlist.hide()
         for a in self.canvas_list.values():
             a[0].destroy()
@@ -265,6 +266,12 @@ class Gallery(ImageSelect):
             a[2].destroy()
         self.p_map = None
         self.canvas_list = None
+	# restore old photo list, in case we removed some and then 
+	# hit cancel button or closed the window
+	if not ok:
+	    if self.old_photo_list is not None:
+	    	self.dataobj.setPhotoList(self.old_photo_list)
+
         
     def on_canvas1_event(self,obj,event):
         """
