@@ -6107,6 +6107,7 @@
 			      <property name="label" translatable="yes">_Edit...</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <signal name="clicked" handler="on_editphoto_clicked" object="sourceEditor" last_modification_time="Fri, 06 Feb 2004 20:06:09 GMT"/>
 			    </widget>
 			    <packing>
 			      <property name="padding">0</property>
