@@ -1,3 +1,11 @@
+2004-02-06  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/gramps.glade: Define handler for the gallery's Edit button.
+	* src/EditSource.py: Connect callback to the gallery's Edit button.
+	* src/ImageSelect.py: Remember old photo list.
+	* src/EditPlace.py: Revert photos on Cancel.
+	* src/EditPerson.py: Revert photos on Cancel.
+	* src/Marriage.py: Revert photos on Cancel.
+
 2004-02-05  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/plugins/Merge.py (gen_key,name_compare): 
 	Fall back to not using soundex if the charset can't be latin-1 encoded.
